[tool.poetry]
name = "osrm-maps"
version = "1.0.0"
description = ""
authors = ["Vlad Vesa <hello@vladvesa.ro>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
environs = "^8.0.0"
PyGithub = "^1.51.*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
